# Inform6

./: AUTHORS  Craft.Of.Adventure.tex  Makefile  Makefile.in  NEWS  README  README.glulx  README.paths  README.source  configure  configure.in  designers_manual.tex  tutorial.html
demos/: Makefile  Makefile.in
designers_manual.info/: README  inform-01  inform-02  inform-03  inform-04  inform-05  inform-06  inform-07  inform-08  inform-09  inform-10  inform-11  inform-12  inform-13  inform-14  inform-15  inform.01  inform.02  inform.03  inform.04  inform.05  inform.06  inform.07  inform.08  inform.09  inform.10  inform.11  inform.12  inform.13  inform.14  inform.15  inform.16  inform.el  inform.info
html/: Makefile  Makefile.am  Makefile.in  misprints.html
include/: Makefile  Makefile.in
info/: Makefile  Makefile.in
inform-6.31.1/include/: Makefile.am  Makefile.in
lib/: Makefile  Makefile.am  Makefile.in
source/: arrays.c  asm.c  bpatch.c  chars.c  directs.c  errors.c  expressc.c  expressp.c  files.c  header.c  header.h  inform.c  lexer.c  linker.c  memory.c  objects.c  states.c  symbols.c  syntax.c  tables.c  text.c  veneer.c  verbs.c
src/: Makefile  Makefile.am  Makefile.in
tutor/: .cvsignore
